Fixed with theme simple2 pagelist wrap line

--- a/simiki/themes/simple2/static/css/style.css
+++ b/simiki/themes/simple2/static/css/style.css
@@ -180,7 +180,6 @@ li.pagelist {
     width: 100%;
     margin-right: 1.5em;
     list-style-type: none;
-    white-space: nowrap;
     overflow: hidden;
 }
 
